--- a/public/home.html
+++ b/public/home.html
@@ -15,7 +15,7 @@
     line-height: 60px;
     background-color: #f5f5f5;
 }</style>
-    <title>Hello, world!</title>
+    <title>SongChallenge</title>
   </head>
   <body>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center" style=".pricing-header{max-width: 700px;}">
@@ -29,7 +29,7 @@
             <h4 class="my-0 font-weight-normal">BPM</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title" id="dataBpm">120</h1>
+            <h1 class="card-title" id="bpm">Loading...</h1>
           </div>
         </div>
         <div class="card mb-4 shadow-sm">
@@ -37,8 +37,8 @@
             <h4 class="my-0 font-weight-normal">Key</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title" id="dataKey">C Major</h1>
-            <h4 class="text-muted">A Minor</h4>
+            <h1 class="card-title" id="key">Loading...</h1>
+            <h4 class="text-muted" id="keyRelative">Loading...</h4>
           </div>
         </div>
         <div class="card mb-4 shadow-sm">
@@ -46,7 +46,7 @@
             <h4 class="my-0 font-weight-normal">Instrument</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title" id="dataInstrument">Tuba</h1>
+            <h1 class="card-title" id="instrument">Loading...</h1>
           </div>
         </div>
         </div>
@@ -56,7 +56,7 @@
             <h4 class="my-0 font-weight-normal">Setting</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title" id="dataSetting">Mountains</h1>
+            <h1 class="card-title" id="setting">Loading...</h1>
           </div>
         </div>
 
@@ -65,7 +65,7 @@
             <h4 class="my-0 font-weight-normal">Theme</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title" id="dataThing">Toys</h1>
+            <h1 class="card-title" id="theme">Loading...</h1>
           </div>
         </div>
         </div>
@@ -74,19 +74,47 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Made by <a href="http://chza.me/" target="_blank">Charlie Britton</a>. Add more settings, themes and whatever by submitting a pull request <a href="/help">here</a>. Licensed under <a href="/license">MIT</a>.</span>
+        <span class="text-muted">Made by <a href="http://chza.me/" target="_blank">Charlie Britton</a>. Add more settings, themes and whatever else you might find useful by submitting a pull request <a href="https://github.com/charliebritton/songchallenge/pulls">here</a>. Licensed under <a href="/license">MIT</a>.</span>
       </div>
     </footer>
 
-    <script>
-
-
-    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+
+     function updateItem(id, text) {
+       if(typeof text == "string") {
+         document.getElementById(id).innerHTML = text
+       }
+       if(typeof text == "object") {
+         document.getElementById('key').innerHTML = text[0]
+         document.getElementById('keyRelative').innerHTML = text[1]
+       }
+
+     }
+
+     function updateAll(text) {
+
+       $.getJSON( "api/generate", function( data ) {
+         $.each( data, function( key, val ) {
+           updateItem(key, val)
+         });
+     })
+   };
+
+      $(document).ready(() => {
+        updateAll()
+      })
+
+      $(document).on("keydown", (e) => {
+        e.keyCode == 32 ? updateAll() : null;
+      });
+
+    </script>
+
   </body>
 </html>
