Add Alexa skill info & allow port set

--- a/public/home.html
+++ b/public/home.html
@@ -23,6 +23,9 @@
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center" style=".pricing-header{max-width: 700px;}">
       <h1 class="display-4">SongChallenge</h1>
       <p class="lead">Quickly generate some ideas for your song!<br>Press <code>space</code> to generate new ideas, or <code>click</code> on a box to refresh it.</p>
+      <div class="alert alert-info" role="alert">
+        <strong>Hey!</strong> Did you know we have an Alexa Skill for this site? Just say, <i>'Alexa, enable SongChallenge'</i> to get started.
+      </div>
     </div>
     <div class="container">
       <div class="card-deck mb-3 text-center">
